Fixed #9145 - Content slide animations fail on Safari

--- a/src/app/components/common/common.css
+++ b/src/app/components/common/common.css
@@ -118,3 +118,7 @@ button {
     transition: opacity .1s linear;
 }
 
+.p-toggleable-content.ng-animating {
+    overflow: hidden;
+}
+
